# Hamster

./: CMakeLists.txt  baseline.cpp  baseline2.cpp  first_algo.cpp  first_algo_optimized.cpp  score.cpp  simulated_annealing.cpp  submission-225-nodes.json  test.cpp  test2.cpp  visualize.cpp
src/: benchmark.py  convert_graphs.py  sample_tests.py  solver_benchmarks.csv
tests/: grafo1000.14.json  grafo10000.38.json  grafo10001.32.json  grafo10002.40.json  grafo10003.40.json  grafo10005.39.json  grafo10006.98.json  grafo10007.31.json  grafo10008.42.json  grafo10009.31.json  grafo1001.12.json  grafo10010.39.json  grafo10012.40.json  grafo10014.39.json  grafo10015.39.json  grafo10016.39.json  grafo10017.96.json  grafo10019.38.json  grafo1002.20.json  grafo10020.38.json  grafo10021.39.json  grafo10023.39.json  grafo10024.32.json  grafo10025.31.json  grafo10026.32.json  grafo10027.38.json  grafo10028.96.json  grafo10029.40.json  grafo1003.11.json  grafo10030.38.json  grafo10031.38.json  grafo10032.38.json  grafo10034.40.json  grafo10035.38.json  grafo10037.39.json  grafo10038.38.json  grafo10039.98.json  grafo1004.11.json  grafo10040.32.json  grafo10041.41.json  (+11172 more)
